# cast

./: .gitignore  CMakeLists.txt  Cast.csproj  Cast.g4  Cast.sln  CastImport.cs  CastSymbol.cs  Dockerfile  LICENSE  Makefile  Program.cs  README.md  Scope.cs  arithmetic.cst  boolean.cst  boolean.glsl  compile_commands.json  docker-compose.yml  example.cst  grammar_compile.sh  test.glsl
Test/: AssignmentTest.cs  Functions.cs  Helper.cs  MathTests.cs  Test.csproj
assets/: assignment.cst  decl.cst  example.cst  function.cst  structs.cst  structs_alias.cst
cast.api/: Dockerfile  Program.cs  cast.api.csproj  cast.api.http
cast.api.core/: CompilationRequest.cs  CompilationResult.cs  CompilationService.cs  GraphResult.cs  cast.api.core.csproj
cast.cli/: Program.cs  cast.cli.csproj  rd.xml
cast.core/: cast.core.csproj
cast.core.b.ak/: CastLexer.cs  CastParser.cs  CastParser.interp  CastParserBaseListener.cs  CastParserBaseVisitor.cs  CastParserListener.cs  CastParserVisitor.cs  CastPreParser.cs  CastPreParserBaseListener.cs  CastPreParserBaseVisitor.cs  CastPreParserListener.cs  CastPreParserVisitor.cs
cast.frontend/: index.html
cast.tests/: EffectBasedTests.cs  RuleBasedTests.cs  cast.tests.csproj
core/: CastSymbol.cs  FunctionKey.cs  Scope.cs  Stage.cs  StdHelper.cs  TypeChecker.cs  Types.cs
examples/: Phongshader.vsh  conversion.cst  conversion.vshconversion.cst  fresnel.cst  saturate.cst
grammar/: BakLexer.g4  CastLexer.g4  CastParser.g4  CastPreParser.g4  build.sh  example.cst
listeners/: VisualErrorListener.cs
src/: CastParserVisitor.cpp  main.cpp
(+155 files in other folders)
